# thunderbird-filter-maker

./: README.md  thunderbird-filter-maker.cabal
app/: Main.hs
src/Thunderbird/: Mbox.hs  MsgFilterRulesDat.hs
