name:                thunderbird-filter-maker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/igrep/thunderbird-filter-maker#readme
license:             BSD3
license-file:        LICENSE
author:              Yuji Yamamoto
maintainer:          whosekiteneverfly@gmail.com
copyright:           2015 Yuji Yamamoto
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable thunderbird-filter-maker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , megaparsec >= 4.3 && < 5
                     , thunderbird-filter-maker
  default-language:    Haskell2010

test-suite thunderbird-filter-maker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 1.3
                     , QuickCheck
                     , containers
                     , thunderbird-filter-maker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/igrep/thunderbird-filter-maker
